[package]
name = "rustbg"
version = "0.1.0"
authors = ["Valerian Garleanu <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["cookies"] }
tokio = { version = "0.2.21", features = ["macros"] }
futures = "0.3.5"
select = "0.4.3"
fancy-regex = "0.3.5"
leptess = "0.8.2"
lazy_static = "1.4.0"
clap = "2.33.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
async-recursion = "0.3.1"
shellexpand = "2.0.0"
